Fixes slideshow controls when narrow image visible

--- a/public/css/plugins/lw-slideshow.less
+++ b/public/css/plugins/lw-slideshow.less
@@ -46,9 +46,17 @@
 		text-decoration: none; 
 	} 
 }
-.lw_slideshow_one_slide .lw_slideshow_controls { display: none; }
-.lw_slideshow_prev,.lw_slideshow_next { position: absolute; bottom: 0; }       
-.lw_slideshow_prev { left: 6px; }
-.lw_slideshow_next { right: 6px; }
-.lw_slideshow_controls .lw_disabled { opacity: 0.5; cursor: default; }
-.lw_slideshow_count { text-align: center; color: #666; }
+.lw_slideshow_one_slide .lw_slideshow_controls {
+    display: none;
+}
+.lw_slideshow_controls .lw_disabled {
+    opacity: 0.5;
+    cursor: default;
+}
+.lw_slideshow_count {
+    display: inline-block;
+    text-align: center;
+    color: #666;
+    margin-left: 5px;
+    margin-right: 5px;
+}
